SNTAB-82 add endpoint to get and edit a user
